--- a/jscolor/demo.html
+++ b/jscolor/demo.html
@@ -6,7 +6,7 @@
 
 	<script type="text/javascript" src="jscolor.js"></script>
 
-	Click here: <input class="color" value="66ff00">
+	Click here: <input type='color' class="color" value="66ff00">
 
 </body>
 </html>
